# -

επεξεργασια φθσικης γλωσσας/: README.md  pyproject.toml  ~$εξεργασια φυσικης γλωσσας.docx  ~WRL1150.tmp  Επεξεργασια φυσικης γλωσσας.docx
επεξεργασια φθσικης γλωσσας/src/code/: 1A.py  1B_test.py
